# Koshi-Flux

./: .gitattributes  .gitignore  CLAUDE.md  FLUX_INTEGRATION_REVIEW.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  install_runpod.sh
flux/: .gitignore  KLEIN_ANIMATION_FINDINGS.md  LICENSE  MANIFEST.in  README.md  memories.json  pyproject.toml  requirements.txt
flux/contrib/audio_reactive/: README.md  __init__.py  __main__.py  api.py  cli.py  curves.py  extractor.py  features.py  generator.py  mapping.py  presets.py  schedule.py  types.py
flux/contrib/audio_reactive/tests/: test_all.py
flux/docs/: AUDIO_FEATURE_EXTRACTION.md  FLUX1_ANIMATION.md
flux/examples/: advanced_keyframes.py  audio_to_animation.py  basic_usage.py  motion_engine_test.py  parameter_parsing.py
flux/scripts/: feedback_sampler_standalone.py  run_comprehensive_tests.py  runpod_complete_setup.sh  runpod_flux1_setup.sh  runpod_full_setup.sh  setup_runpod.sh  test_audio_runpod.sh  test_flux1.py  test_flux2.py
flux/src/deforum_flux/: __init__.py  feedback_sampler.py
flux/src/deforum_flux/animation/: motion_engine.py  motion_transforms.py  motion_utils.py  parameter_engine.py
flux/src/deforum_flux/api/: __init__.py  main.py  main_original.py
flux/src/deforum_flux/audio/: __init__.py  __main__.py  cli.py  schedule_generator.py
flux/src/deforum_flux/bridge/: __init__.py  bridge_config.py  bridge_generation_utils.py  bridge_stats_and_cleanup.py  dependency_config.py  flux_deforum_bridge.py  parameter_adapter.py
flux/src/deforum_flux/core/: __init__.py  exceptions.py  logging_config.py
flux/src/deforum_flux/feedback/: __init__.py  color_matching.py  processor.py
flux/src/deforum_flux/flux1/: __init__.py  motion_engine.py  pipeline.py
flux/src/deforum_flux/flux2/: __init__.py  config.py  motion_engine.py  pipeline.py
flux/src/deforum_flux/models/: __init__.py  model_loader.py  model_paths.json  model_paths.py  models.py
flux/src/deforum_flux/pipeline/: __init__.py  factory.py
flux/src/deforum_flux/shared/: __init__.py  base_engine.py  noise_coherence.py  parameter_adapter.py  transforms.py
flux/src/deforum_flux/utils/: file_utils.py  tensor_utils.py  video_io.py
flux/src/flux/: NOTICE
flux/src/flux_motion/: __init__.py  feedback_sampler.py
flux/src/flux_motion/api/: __init__.py  main.py
flux/src/flux_motion/audio/: __main__.py  cli.py
flux/src/flux_motion/bridge/: __init__.py  parameter_adapter.py
flux/src/flux_motion/core/: __init__.py  exceptions.py  logging_config.py
flux/src/flux_motion/feedback/: __init__.py  color_matching.py  processor.py
flux/src/flux_motion/flux1/: __init__.py  config.py  motion_engine.py  pipeline.py
flux/src/flux_motion/flux2/: config.py  motion_engine.py  pipeline.py
flux/src/flux_motion/pipeline/: __init__.py  factory.py
flux/src/flux_motion/shared/: __init__.py  base_engine.py  parameter_adapter.py  transforms.py
flux/src/flux_motion/utils/: file_utils.py  tensor_utils.py
flux/src/koshi_flux/: __init__.py  feedback_sampler.py
flux/src/koshi_flux/api/: __init__.py  main.py
flux/src/koshi_flux/audio/: __main__.py  extractor.py  mapping_config.py
flux/src/koshi_flux/bridge/: __init__.py  parameter_adapter.py
flux/src/koshi_flux/core/: exceptions.py  logging_config.py
flux/src/koshi_flux/feedback/: __init__.py  color_matching.py  (+1 more)
flux/tests/: __init__.py  test_audio.py  test_bridge.py  test_flux2_klein.py  test_model_loader.py  test_motion_engine.py  test_motion_mock.py  test_parameter_adapter.py
flux/tests/test_api/: __init__.py  test_generation.py  test_models.py  test_security.py
(+144 files in other folders)
